<resources>
    <string name="app_name">Chat Application</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="username_error">enter username</string>
    <string name="email_error">enter email plz</string>
    <string name="password_6_error">at least 6 characters</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="johndoe">johndoe@gmail.com</string>
    <string name="gender">gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="accept_notifications">Accept Notifications</string>
    <string name="birth_date">Select birth date</string>
    <string name="my_friend">my friend</string>
    <string name="message_text">message text</string>
    <string name="empty_message">empty message</string>
    <string name="send">send</string>
    <string name="logout">logout</string>
    <string name="chatlist">my chat list</string>
    <string name="message_sent">message sent!</string>

    <string name="sample_letter">S</string>
    <string name="sample_name">Some name</string>
    <string name="sample_message">Sample message</string>
    <string name="open_message">Open message</string>
    <string-array name="gender_spinner">
        <item>male</item>
        <item>female</item>
    </string-array>

    <string name="username_exists">Username already exist</string>
    <string name="username_does_not_exists">Username does not exist</string>
    <string name="error">Error</string>
    <string name="user_registered">User registered</string>
    <string name="user_logged_in">Logged in</string>
    <string name="refresh">refresh</string>
    <string name="enter_message">Enter message</string>
    <string name="unknown_error">UNKNOWN ERROR</string>
    <string name="unable_to_send_message">Unable to send message</string>
    <string name="logged_out">Logged out</string>
    <string name="wrong_user_pass">Wrong username/password</string>
    <string name="username_taken">Username already taken</string>
    <string name="have_new_message">You have new messages</string>
</resources>
