<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jasic.filip.chatapplication.activities.MessageActivity">

    <Button
        android:id="@+id/refresh_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/logout_message"
        android:text="@string/refresh" />

    <Button
        android:id="@+id/logout_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/logout" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/send"
        tools:ignore="RelativeOverlap" />

    <EditText
        android:id="@+id/msg"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/send_button"
        android:layout_marginStart="17dp"
        android:hint="@string/message_text" />

    <TextView
        android:id="@+id/chatName"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/sample_name" />

    <ListView
        android:id="@+id/listMessage"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:divider="@null"
        android:stackFromBottom="true">

    </ListView>

</RelativeLayout>
