<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jasic.filip.chatapplication.activities.ContactActivity">

    <Button
        android:id="@+id/logout_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/logout"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/chatlist"
        android:layout_width="170dp"
        android:layout_height="47dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/chatlist"
        android:textSize="23sp" />

    <ListView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="465dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

    </ListView>

    <Button
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/logout_list"
        android:text="@string/refresh" />


</RelativeLayout>
